Düzelt: CSS ve JavaScript dosyalarının yollarını güncelle

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Türkçe Karakter Dönüştürücü</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     <h2>Türkçe Metin Düzenleyici</h2>
@@ -54,6 +54,6 @@
         </div>
     </div>
 
-    <script src="popup.js"></script>
+    <script src="./src/popup.js"></script>
 </body>
 </html>
